--- a/app/src/main/res/layout/fragment_onboarding2.xml
+++ b/app/src/main/res/layout/fragment_onboarding2.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView123123"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Up!"
@@ -27,7 +27,7 @@
             android:textStyle="bold"
             />
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView31233"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign up for the opportunity you would like to attend and connect it to your calendar so that you will be reminded of it before it happens."
