--- a/app/src/main/res/layout/fragment_onboarding3.xml
+++ b/app/src/main/res/layout/fragment_onboarding3.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView1232323"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Attend!"
@@ -27,7 +27,7 @@
             android:textStyle="bold"
             />
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView2323222"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="We’ve had many teens enjoy their experiences at different activism opportunities and give back to their communities!"
