--- a/app/src/main/res/layout/fragment_onboarding4.xml
+++ b/app/src/main/res/layout/fragment_onboarding4.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".OnboardingFragment4">
 
-    <!-- TODO: Update blank fragment layout -->
-    <?xml version="1.0" encoding="utf-8"?>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,7 +33,7 @@
                 app:srcCompat="@drawable/onboard4" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textView12312311"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Explore Acteen!"
@@ -43,7 +42,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textView123123"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="30dp"
