--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,6 +57,15 @@
             android:inputType="textPassword"
             android:layout_marginBottom="15dp"/>
 
+        <CheckBox
+            android:id="@+id/passwordToggleCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Show Password"
+            android:textColor="@android:color/black" />
+
         <EditText
             android:id="@+id/signup_name"
             android:layout_width="300dp"
