--- a/app/src/main/res/layout/activity_sign_up_organization.xml
+++ b/app/src/main/res/layout/activity_sign_up_organization.xml
@@ -52,6 +52,16 @@
             android:inputType="textPassword"
             android:layout_marginBottom="12dp"/>
 
+        <CheckBox
+            android:id="@+id/passwordToggleCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Show Password"
+            android:textColor="@android:color/black" />
+
+
         <EditText
             android:id="@+id/signup_orgname"
             android:layout_width="300dp"
@@ -125,8 +135,7 @@
                 android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:paddingRight="5dp"
-                android:text="@string/checkBoxText"
-                />
+                android:text="@string/checkBoxText" />
         </LinearLayout>
 
         <Button
