--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Meetworkshop" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.Meetworkshop" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#F9DD39</item>
         <item name="colorPrimaryVariant">#F9DD39</item>
