--- a/app/src/main/res/layout/bottom_navigation_organ.xml
+++ b/app/src/main/res/layout/bottom_navigation_organ.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#fff1a1"
+        android:background="@drawable/customborder"
         android:layout_alignParentBottom="true">
 
         <ImageButton
