--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -91,6 +91,7 @@
 
         <Button
             android:id="@+id/buttonHabibi"
+            android:textAllCaps="false"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Sign Out" />
