--- a/app/src/main/res/drawable/customborder.xml
+++ b/app/src/main/res/drawable/customborder.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:topRightRadius="20dp" android:topLeftRadius="20dp"/>
-    <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-    <stroke android:width="3dp" android:color="#FED600"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+<item>
+    <shape android:shape="rectangle" >
+        <corners android:topRightRadius="20dp" android:topLeftRadius="20dp"/>
+        <solid android:color="#ffffff" />
+    </shape>
+</item>
+<item>
+    <shape xmlns:android="http://schemas.android.com/apk/res/android"  android:shape="rectangle" >
+        <corners android:topRightRadius="20dp" android:topLeftRadius="20dp"/>
+        <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
+        <stroke android:width="3dp" android:color="#FBD400"/>
+    </shape>
+</item>
+
+</layer-list>
