--- a/app/src/main/res/drawable/pagination_3.xml
+++ b/app/src/main/res/drawable/pagination_3.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="53dp"
+    android:width="71dp"
     android:height="32dp"
-    android:viewportWidth="53"
+    android:viewportWidth="71"
     android:viewportHeight="32">
   <path
       android:pathData="M3.5,16m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
@@ -11,5 +11,8 @@
       android:fillColor="#FED600"/>
   <path
       android:pathData="M49.5,16m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
+      android:fillColor="#ACB8C2"/>
+  <path
+      android:pathData="M67.5,16m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
       android:fillColor="#ACB8C2"/>
 </vector>
