--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background">
 
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <!-- Header layout -->
     <LinearLayout
         android:id="@+id/header_layout"
@@ -23,13 +28,50 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
+            android:id="@+id/header_tes12s12sxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textSize="24sp" />
+        <TextView
+            android:id="@+id/header_te12s1s21xt"
+            android:layout_marginTop="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textSize="24sp" />
+        <TextView
             android:id="@+id/header_text"
+            android:layout_marginTop="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textSize="24sp" />
+        <TextView
+            android:id="@+id/header_tes2s2s2ssxt"
+            android:layout_marginTop="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textSize="24sp" />
+        <TextView
+            android:id="@+id/header_text123123"
+            android:layout_marginTop="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textSize="24sp" />
+        <TextView
+            android:id="@+id/header_text1112321"
+            android:layout_marginTop="200dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Home"
             android:textSize="24sp" />
 
     </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 
