--- a/app/src/main/res/layout/activity_user_profile_org.xml
+++ b/app/src/main/res/layout/activity_user_profile_org.xml
@@ -35,6 +35,7 @@
             android:id="@+id/btn_sign_out"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:text="Sign Out" />
 
 
