--- a/app/src/main/res/layout/fragment_onboarding4.xml
+++ b/app/src/main/res/layout/fragment_onboarding4.xml
@@ -46,10 +46,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="0dp"
-                android:text="Become a teen activist in your community!"
+                android:text="Become a changemaker in your community!"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="15sp" />
+
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/nav_home"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/pagination_4"
+                />
+
 
 
 
