--- a/app/src/main/res/layout/activity_user_profile_org.xml
+++ b/app/src/main/res/layout/activity_user_profile_org.xml
@@ -15,21 +15,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/profileImageViewOrg"
+            android:src="@drawable/icon_account"
+            android:layout_width="117dp"
+            android:layout_marginTop="30dp"
+            android:layout_height="106dp"
+            android:layout_centerHorizontal="true"
+            />
 
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+
 
     <TextView
-        android:id="@+id/header_text"
+        android:id="@+id/name_text_org"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UserProfileOrgActivity"
+        android:text="Username"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/Black"
+        android:textSize="27sp" />
+
+    <TextView
+        android:id="@+id/email_text_org"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Email"
+        android:textColor="@color/DarkGray"
         android:textSize="24sp" />
 
 
 
-    </RelativeLayout>
+
 
         <Button
             android:id="@+id/btn_sign_out"
