--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primaryColor">#FF0000</color>
+    <color name="primaryDarkColor">#00FF00</color>
     <color name="colorPrimary">#FDDF2E</color>
     <color name="colorAccent">#FF4081</color>
     <color name="purple_200">#FFBB86FC</color>
