--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -8,78 +8,73 @@
         layout="@layout/bottom_navigation_activist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp" />
 
 
+    <ImageView
+        android:id="@+id/profileImageView"
+        android:layout_width="117dp"
+        android:layout_height="106dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="137dp"
+        android:layout_marginBottom="564dp" />
 
-
-
-        <ImageView
-            android:id="@+id/profileImageView"
-            android:layout_width="117dp"
-            android:layout_height="106dp"
-            android:layout_centerHorizontal="true"
-            />
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/followersTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="120dp"
-        android:gravity="center_horizontal"
 
-        android:orientation="horizontal">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="220dp"
+        android:layout_marginBottom="454dp"
+        android:lines="2"
+        android:maxLines="2"
+        android:text="Followers \n        0"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/followersTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/followingTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginEnd="133dp"
+        android:layout_marginBottom="454dp"
+        android:lines="2"
+        android:maxLines="2"
+        android:text="Following\n       0"
+        android:textSize="16sp" />
 
-            android:lines="2"
-            android:maxLines="2"
-            android:text="Followers \n        0"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/postsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="453dp"
+        android:lines="2"
+        android:maxLines="2"
+        android:text="Posts\n    0"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/followingTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:lines="2"
-            android:maxLines="2"
-            android:text="Following\n       0"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/postsTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:lines="2"
-            android:maxLines="2"
-            android:text="Posts\n    0"
-            android:textSize="16sp" />
-
-    </LinearLayout>
-
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="200dp"
-    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/userNameTextView"
         android:layout_width="185dp"
         android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="105dp"
         android:gravity="center_horizontal"
         android:text="User Name"
         android:textSize="25sp"
         android:textStyle="bold" />
-</LinearLayout>
-
 
     <RelativeLayout
         android:layout_width="match_parent"
