--- a/app/src/main/res/layout/activity_user_profile_org.xml
+++ b/app/src/main/res/layout/activity_user_profile_org.xml
@@ -1,67 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homepage.homeorganization.UserProfileOrgActivity">
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <ImageView
-            android:id="@+id/profileImageViewOrg"
-            android:src="@drawable/icon_account"
-            android:layout_width="117dp"
-            android:layout_marginTop="30dp"
-            android:layout_height="106dp"
-            android:layout_centerHorizontal="true"
-            />
-
-
-
-    <TextView
-        android:id="@+id/name_text_org"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/Black"
-        android:textSize="27sp" />
-
-    <TextView
-        android:id="@+id/email_text_org"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Email"
-        android:textColor="@color/DarkGray"
-        android:textSize="24sp" />
-
-
-
-
-
-        <Button
-            android:id="@+id/btn_sign_out"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:text="Sign Out" />
+    android:background="@drawable/gradient_background">
 
 
     <include
         layout="@layout/bottom_navigation_organ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp" />
 
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/profileImageView"
+        android:layout_width="117dp"
+        android:layout_height="106dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="137dp"
+        android:layout_marginBottom="564dp" />
+
+
+
+    <TextView
+        android:id="@+id/userNameTextView"
+        android:layout_width="185dp"
+        android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="105dp"
+        android:gravity="center_horizontal"
+        android:text="User Name"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="80dp"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:id="@+id/buttonHabibi"
+            android:textAllCaps="false"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Sign Out" />
+
+    </RelativeLayout>
+
+
+
+
+</RelativeLayout>
