--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -3,7 +3,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:clickable="true"
     android:focusable="true"
     android:background="@drawable/gradient_background">
@@ -57,4 +56,14 @@
         android:layout_marginEnd="124dp"
         android:text="Upload Post" />
 
+
+    <include
+        layout="@layout/bottom_navigation_organ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp" />
+
 </RelativeLayout>
+
+
